--- a/sale-report-app/package.json
+++ b/sale-report-app/package.json
@@ -73,6 +73,7 @@
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
     "lucide-react": "^0.542.0",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
@@ -82,7 +83,6 @@
     "react-window": "^2.1.0",
     "react-window-infinite-loader": "^1.0.10",
     "tailwind-merge": "^3.3.1",
-    "xlsx": "^0.18.5",
     "zod": "^4.1.5"
   },
   "lint-staged": {
